--- a/react/src/listing.css
+++ b/react/src/listing.css
@@ -102,3 +102,49 @@ body {
         margin-bottom: 20px;
     }
 }
+
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #005BBB;
+    color: white;
+    border: none;
+    font-size: 1.5rem;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    display: inline-block;
+    margin-right:5%;
+    float: right;
+    margin-top: 25px;
+
+    font-size: 1rem;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 200px;
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    margin-right: 5%;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #005BBB; color:white}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block; }
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #005BBB;}
