--- a/react/src/home.css
+++ b/react/src/home.css
@@ -158,9 +158,29 @@ li a {
 
 .categoryList li::before{
     content: '▶';
-    margin-bottom: 15px;
-    margin-right: 15px;
+    margin-bottom: 10px;
+    margin-right: 10px;
     font-size: 1.15rem;
+}
+
+.categoryList button{
+    width: 250px;
+    height: 60px;
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    color: white;
+    background-color: #005BBB;
+}
+
+.categoryList h2{
+    font-size: 1.75rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
 }
 
 
