--- a/react/src/home.css
+++ b/react/src/home.css
@@ -132,12 +132,15 @@ li a {
 
 .categoryList h2{
     width: 90%;
-    height: fit-content;
+    height: 5px;
     margin-top: 0;
     margin-left: 5%;
     margin-right: 5%;
-    margin-bottom: 0;
-    font-size: 1.25rem;
+    margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.75rem;
     font-weight: bold;
 }
 
@@ -146,9 +149,18 @@ li a {
     justify-content: center;
     display: inline-block;
     vertical-align: top;
-    margin-left: 5%;
+    margin-left: 5px;
+    margin-right: 25px;
     font-size: 1rem;
     list-style-type: none
+}
+
+.categoryList ul2{
+    display: flex;
+    justify-content: center;
+    vertical-align: top;
+    font-size: 1rem;
+    list-style-type: none;
 }
 
 .categoryList li{
@@ -164,25 +176,39 @@ li a {
 }
 
 .categoryList button{
-    width: 250px;
-    height: 60px;
-    font-size: 1rem;
+    width: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: 30px;
+    margin-right: 30px;
+    height: 60px;
+    font-size: 1rem;
     font-weight: bold;
     color: white;
     background-color: #005BBB;
+
+}
+.categoryList button:hover{
+    color: #005BBB;
+    background-color: white;
 }
 
-.categoryList h2{
-    font-size: 1.75rem;
+.categoryList button2{
+    width: 250px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
+    height: 60px;
+    font-size: 1rem;
+    font-weight: bold;
+    color: black;
+    background-color: #D5F919;
+
 }
-
-
-
-
+.categoryList button2:hover{
+    color: #005BBB;
+    background-color: white;
+}
