--- a/react/src/home.css
+++ b/react/src/home.css
@@ -209,6 +209,6 @@ li a {
 
 }
 .categoryList button2:hover{
-    color: #005BBB;
-    background-color: white;
+    color: #D5F919;
+    background-color: black;
 }
